adapt Result